# PaperRAG

./: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
api/: AGENTS.md  database.py  main.py  models.py
api/routes/: conversations.py  query.py
api/services/: conversation_service.py  paper_service.py  query_service.py
frontend/src/: AGENTS.md  index.css
frontend/src/components/reader/: ChatPanel.tsx
frontend/src/pages/: PaperDetailPage.tsx  PaperReaderPage.tsx  QueryPage.tsx
frontend/src/stores/: conversation-store.ts
src/agent/: AGENTS.md  graph.py  tools.py
src/custom/: AGENTS.md  qwen3_vl_embedding.py
src/ingest/: mineru_parser.py
src/rag/: embedding.py  vector_store.py
tests/: AGENTS.md
tests/evaluation/: retrieval_eval.py
tests/unit/: test_regression_provenance.py  test_vector_store_optimizations.py
