[project]
name = "scholarrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-qdrant>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.50",
    "mineru[all]>=2.7.6",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "ruff>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sse-starlette>=1.6.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.24.0",
]
